--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
 
-    <title>Github-guides by edge226</title>
+    <title>GitGub-Guides by edge226</title>
   </head>
 
   <body>
 
     <header>
       <div class="container">
-        <h1>Github-guides</h1>
+        <h1>GitHub-Guides</h1>
         <h2>Guides created to help people start using GitHub.</h2>
 
         <section id="downloads">
